K8/deploy_app.yml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name:  wwwtestapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
  labels:
    app: redis-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
      - name: redis-cache
        image: redis

        resources:
          requests:
            cpu: 200m
            memory: 256Mi
        ports:
        - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-cache
  name: redis-cache
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  type: ClusterIP
  selector:
    app: redis-cache



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwttestapp
  labels:
    app: wwttestapp
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: wwttestapp
  template:
    metadata:
      labels:
        app: wwttestapp
    spec:
      containers:
      - name: webapp
        image: casperwwt/webtestapp
        

        resources:
          requests:
            cpu: 512m
            memory: 256Mi
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wwttestapp
  name: wwttestapp
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  selector:
    app: wwttestapp
