K8/deploy_app_loadbalancer.yml
kind: Service
apiVersion: v1
metadata:
  name:  wwttestappservice
spec:
  selector:
    app:  wwttestapp
  type:  LoadBalancer
  ports:
  - name:  http
    port:  80
    targetPort:  80
