K8/deploy_app_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wwttestapp
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "affinity"
    nginx.ingress.kubernetes.io/session-cookie-expires: "5"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "5"
    nginx.ingress.kubernetes.io/location-snippets: |
      proxy_set_header Connection $http_connection;
  # namespace: wwtwebapp
spec:
  ingressClassName: nginx-wwt
  tls:
    - hosts:
        - wwtwebapp.microsoft.k8testing.local
      secretName: k8testing
  rules:
  - host: "wwtwebapp.microsoft.k8testing.local" #Update with correct URL
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wwttestapp
            port:
              number: 80
